@@ -1,6 +1,6 @@
 # encoding=utf-8
 # Generated by cpy
-# 2015-02-15 16:53:50.700418
+# 2015-04-01 12:54:58.910307
 import os, sys
 from sys import stdin, stdout
 
@@ -207,7 +207,7 @@ class SSDB(object):
 					pass
 					return SSDB_Response(resp[0], resp[1 : ])
 				break
-			if False or ((cmd) == 'zscan') or ((cmd) == 'zrscan') or ((cmd) == 'zrange') or ((cmd) == 'zrrange'):
+			if False or ((cmd) == 'zscan') or ((cmd) == 'zrscan') or ((cmd) == 'zrange') or ((cmd) == 'zrrange') or ((cmd) == 'zpop_front') or ((cmd) == 'zpop_back'):
 				pass
 
 				if resp[0]=='ok':
